--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "laravel/passport": "^5.0 || ^6.0 || ^7.0",
-        "illuminate/support": "^5.0"
+        "illuminate/support": "^5.1 || ^6.0"
     },
     "autoload": {
         "psr-4": {
